src/test/deca/syntax/invalid/synt/missingOBrace.deca
// @expected_output deca:3:0:

}
